# aui.spine

./: .clang-format  CMakeLists.txt  README.md  aui.spine-config.cmake.in
.github/workflows/: build.yml
example/: CMakeLists.txt
example/src/: MainWindow.cpp  MainWindow.h
shaders/: spine.fsh  spine.vsh
src/AUI/Spine/: ASpineView.cpp  ASpineView.h  BlockAllocator.h  SkeletonRenderer.cpp  SkeletonRenderer.h
tests/: stub.cpp
